--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="bg-[#111315] relative -z-10">
-		<img src="../../public/img/bg-cafe.jpg" alt="Background Cafe"/>
+		<img src="./public/img/bg-cafe.jpg" alt="Background Cafe"/>
 		<slot />
 	</body>
 </html>
