--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import bgImage from '../img/bg-cafe.jpg';
 interface Props {
 	title: string;
 }
@@ -16,7 +17,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="bg-[#111315] relative -z-10">
-		<img src="./public/img/bg-cafe.jpg" alt="Background Cafe"/>
+		<img src={bgImage.src} alt="Background Cafe."/>
 		<slot />
 	</body>
 </html>
